# nju_ws_backup

./: README.txt
devel/: .catkin  .rosinstall  setup.sh
devel/include/camera/: PhotoService.h  PhotoServiceRequest.h  PhotoServiceResponse.h  PhotoboxSICHUANService.h  PhotoboxSICHUANServiceRequest.h  PhotoboxSICHUANServiceResponse.h  PhotoboxService.h  PhotoboxServiceRequest.h  PhotoboxServiceResponse.h  PhotoshelfService.h  PhotoshelfServiceRequest.h  PhotoshelfServiceResponse.h
devel/include/dobot/: ClearAllAlarmsStateRequest.h  ClearAllAlarmsStateResponse.h  GetARCParamsRequest.h  GetARCParamsResponse.h  GetAlarmsStateRequest.h  GetAlarmsStateResponse.h  GetCPParamsRequest.h  GetCPParamsResponse.h  GetColorSensorRequest.h  GetColorSensorResponse.h  GetDeviceNameRequest.h  GetDeviceNameResponse.h  GetDeviceSNRequest.h  GetDeviceSNResponse.h  GetDeviceVersionRequest.h  GetDeviceVersionResponse.h  GetEndEffectorGripperRequest.h  GetEndEffectorGripperResponse.h  GetEndEffectorLaserRequest.h  GetEndEffectorLaserResponse.h  GetEndEffectorParamsRequest.h  GetEndEffectorParamsResponse.h  GetEndEffectorSuctionCupRequest.h  GetEndEffectorSuctionCupResponse.h  GetHOMEParamsRequest.h  GetHOMEParamsResponse.h  GetIOADCRequest.h  GetIOADCResponse.h  GetIODIRequest.h  GetIODIResponse.h  GetIODORequest.h  GetIODOResponse.h  GetIOMultiplexingRequest.h  GetIOMultiplexingResponse.h  GetIOPWMRequest.h  GetIOPWMResponse.h  GetInfraredSensorRequest.h  GetInfraredSensorResponse.h  GetJOGCommonParamsRequest.h  GetJOGCommonParamsResponse.h  (+86 more)
devel/include/motion_control/: getDiffAngle.h  getDiffAngleRequest.h  getDiffAngleResponse.h  getFrontDist.h  getFrontDistRequest.h  getFrontDistResponse.h  getLeftDist.h  getLeftDistRequest.h  getLeftDistResponse.h  getLeftFrontDist.h  getLeftFrontDistRequest.h  getLeftFrontDistResponse.h  getRightDist.h  getRightDistRequest.h  getRightDistResponse.h  getRightFrontDist.h  getRightFrontDistRequest.h  getRightFrontDistResponse.h
devel/lib/dobot/: DobotClient_JOG  DobotClient_PTP
devel/lib/pkgconfig/: camera.pc  dobot.pc  motion_control.pc
devel/lib/python2.7/dist-packages/camera/srv/: _PhotoService.py  _PhotoboxSICHUANService.py  _PhotoboxService.py  _PhotoshelfService.py  __init__.py
devel/lib/python2.7/dist-packages/dobot/srv/: _GraspService.py  _ThrowService.py  __init__.py
devel/lib/python2.7/dist-packages/motion_control/srv/: __init__.py  _getDiffAngle.py  _getFrontDist.py  _getLeftDist.py  _getLeftFrontDist.py  _getRightDist.py  _getRightFrontDist.py
devel/share/camera/cmake/: camera-msg-extras.cmake  camera-msg-paths.cmake  cameraConfig.cmake
devel/share/common-lisp/ros/camera/srv/: PhotoService.lisp  (+8 more)
devel/share/dobot/cmake/: dobot-msg-paths.cmake  dobotConfig.cmake
devel/share/motion_control/cmake/: motion_control-msg-extras.cmake  motion_control-msg-paths.cmake  motion_controlConfig.cmake
devel/share/roseus/ros/camera/: manifest.l
devel/share/roseus/ros/dobot/: manifest.l
devel/share/roseus/ros/motion_control/: manifest.l
src/camera/: CMakeLists.txt
src/camera/config/: error.txt
src/camera/launch/: camera_catch_test.launch  take_photo.launch
src/camera/scripts/: camera_catch_test.py  take_photo.py
src/camera/srv/: PhotoService.srv  PhotoboxSICHUANService.srv  PhotoshelfService.srv
src/camera/zmq/: pnp.py  server.py
src/dobot/: CMakeLists.txt  package.xml
src/dobot/launch/: Action.launch  DobotUse.launch  Pose.launch  Server.launch  SetHome.launch  SetPose.launch
src/dobot/scripts/: Action.py  DobotUse.py  Pose.py  SetHome.py  SetPose.py
src/dobot/src/: DobotClient_JOG.cpp  DobotServer.cpp
src/dobot/srv/: GraspService.srv  ThrowService.srv
src/motion_control/: CMakeLists.txt  package.xml
src/motion_control/config/: README.txt  nav_rules.json  position.txt  position_old.txt  state_log.txt  state_save.pkl
src/motion_control/launch/: main_process.launch  main_process_only.launch  test.launch  test_only.launch
src/motion_control/scripts/: basic_move.py  lidar.py  main_process.py  pid.py  test.py
src/motion_control/srv/: getDiffAngle.srv  getFrontDist.srv  getLeftDist.srv  getLeftFrontDist.srv  getRightDist.srv  getRightFrontDist.srv
(+47 files in other folders)
